# cv64

./: .clang-format  .cmake-format.json  .editorconfig  .gitignore  .gitmodules  .markdownlint.yaml  .mise.toml  .pre-commit-config.yaml  .rtx.toml  CMakeLists.txt  Dockerfile  Makefile  README.md  baserom.z64.sha1  castlevania.inflated.yaml  castlevania.sha1  castlevania.yaml  compile_flags.txt  config.yml  package-lock.json  requirements.txt
asm/: CMakeLists.txt
assets/yml/: ni_6F3BD0.yml  ni_rosa_petals.yml
cmake/: CreateBinaryObjects.cmake  IDO.cmake  Prerequisites.cmake  PreventInSourceBuilds.cmake  toolchain.cmake
docs/: CONTRIBUTING.md  STYLE.md  compression.md  objects.md
include/: bit.h  c64.h  common.h  cv64.h  macro.inc
include/game/: A9560.h  actor.h  actor_config.h  actor_settings.h  animation.h  atari.h  atari_work.h  collision.h  color.h  controller.h  controller_pak.h  cutscene.h  cutscene_ID.h  debug.h  effect.h  enemy_list.h  event_flags.h  fade.h  gamestate.h  item.h  map_actor_model.h  math.h  memory.h  module.h  module_ID.h  nisitenma_ichigo.h  object.h  object_ID.h  random.h  save.h  sound.h  struct_78.h  system_work.h  unknown_struct.h  unknown_struct_2.h  window.h
include/game/gfx/: camera.h  color.h  figure.h  graphic_container.h  hierarchy.h  light.h  misc.h  model.h  model_info.h  struct_47.h
include/game/menu/: pause_item_menu_work.h  sound_menu_work.h
include/game/modules/engine/: GameStateMgr.h
include/game/objects/camera/: cameraMgr.h  masterLightMgr.h  modelLighting.h  object_006E.h  pointLight.h
include/game/objects/cutscene/: CSFilmReel.h  bottom_elevator_activator.h  cs_film_reel.h  cutsceneMgr.h  cutscene_trigger.h  demo50.h  demo60.h  explosive_wall_spot.h  interactables.h  interactables_helpers.h  interactuables.h  interactuables_helpers.h  library_puzzle.h  mandragora_textbox.h  nitro_disposal_textbox.h  nitro_textbox.h
include/game/objects/effect/: distortion.h  effect_manager.h  fire.h  fire_sparkles.h  pickableItemFlash.h
include/game/objects/enemy/: bloodManAssetsLoader.h  death.h  iceManAssetsLoader.h  mudAndLavaManAssetsLoader.h  object_20A3.h  object_20A4.h  object_20A5.h  openingBat.h
include/game/objects/engine/: DMAMgr.h  GameStateMgr.h  PlayerController.h  creditsMgr.h  konami_kcek_logos.h  object_0002.h  object_0003.h  player_controller.h  title_demo.h
include/game/objects/map/: commonMoon.h  lever.h  object_0172.h  object_017C.h  object_8015C368.h
include/game/objects/map_handling/: loading_zone.h
include/game/objects/map_objects/: obj_01B5.h
include/game/objects/menu/: HUD.h  characterSelect.h  characterSelect.msg  contractMgr.h  easy_mode_ending.msg  easy_mode_ending_msg.h  entranceMapNameDisplay_mapNames.msg  (+23 more)
include/ultra64/: abi.h  assert.h  controller.h  dbgproto.h  gbi.h  macros.h  mbi.h  message.h  regdef.h  thread.h  ultra64.h  ultrahost.h  ultratypes.h
include/ultra64/PR/: R4300.h  abi.h  gbi.h  gs2dex.h  gt.h  gu.h  libaudio.h  mbi.h  os.h  os_cache.h  os_cont.h  os_convert.h  os_debug.h  os_eeprom.h  os_error.h  os_exception.h  os_flash.h  os_gbpak.h  os_gio.h  os_host.h  os_internal.h  os_internal_debug.h  os_internal_error.h  os_internal_exception.h  os_internal_flash.h  os_internal_gio.h  os_internal_host.h  os_internal_reg.h  os_internal_rsp.h  os_internal_si.h  os_internal_thread.h  os_internal_tlb.h  os_libc.h  os_message.h  os_motor.h  os_pfs.h  os_pi.h  os_reg.h  os_rsp.h  os_si.h  (+19 more)
include/ultra64/gcc/: memory.h  sgidefs.h  stdarg.h  stdlib.h  string.h
include/ultra64/ido/: stdarg.h
include/ultra64/sys/: asm.h  regdef.h
linker/: symbol_addrs.txt  symbol_addrs_assets.txt  symbol_addrs_makerom.txt  symbol_addrs_overlays.txt
linker_scripts/: symbol_addrs.txt  undefined_funcs.ld
make/: Makefile  flags.make  tools.make
scripts/: bootstrap  bootstrap.cmd  build.make  clean  ido.make  perm  platform.make  split  sym
scripts/permuter/: _default  prepare
src/: 12700.c  1AE50.c  CMakeLists.txt  F460.c  controller_pak.c  debug.c  dma.c  effectMgr.c  effect_manager.c  enemy_list.c  fade.c  gamestate.c  konamiLogo.c  konami_kcek_logos.c  memory.c  module.c  object.c  object_0002.c  object_flow.c  vec3f.c
src/common/: A9560.c  EDA60.c  cutscene_manager.c  gameplay_common_textbox.c  gameplay_menu_mgr.c  gameplay_menu_mgr_textbox.c  hud_params.c  interactables.c  interactables_helpers.c  interactables_tables.c  interactuables.c  interactuables_helpers.c  interactuables_tables.c  menu_alloc_struct.c  mini_scroll_setup.c  necro_work.c  necronomicon.c  object_017C.c  page.c  page_work.c  skybox_common_actors.c  stage_select.c
src/effect/: fire.c  fire_sparkles.c
src/nisitenma_ichigo/overlay/: credits_manager.c  overlay_BA.c
src/overlay/: carrie.c  carrie_leftstrip.c  carrie_rightstrip.c  carrie_skirt.c  credits_manager.c  cs_film_reel.c  demonDraculaAssetsLoader.c  demon_dracula_assets_loader.c  difficulty_and_character_select.c  easy_mode_ending_msg.c  entrance_map_name_display.c  icemanAssetsLoader.c  konami_kcek_logos.c  mandragora_textbox.c  nitro_textbox.c  openingBat.c  overlay_7D.c  overlay_95.c  overlay_BA.c  pause_menu.c  reinhardt.c  reinhardt_attackmgr.c  reinhardt_scarf.c  renon_briefcase.c  textbox_advance_arrow.c  title_demo.c
src/overlay/map/: 6C3300.c  6C3B50.c  6CF420.c  6D2840.c  6E86B0.c  6E96D0.c  BEKKAN_BOSS.c  CHIKA_KODO.c  CHIKA_SUIRO.c  DRACULA.c  HONMARU_1F.c  HONMARU_3F_KITA.c  HONMARU_3F_MINAMI.c  HONMARU_4F_MINAMI.c  HONMARU_5F.c  HONMARU_B1F.c  MEIRO_TEIEN.c  ROSE.c  TENSHU.c  TOU_TURO.c  bekkan_1f.c  bekkan_boss.c  chika_kodo.c  chika_suiro.c  dracula.c  honmaru_1f.c  honmaru_3f_kita.c  honmaru_3f_minami.c  honmaru_4f_minami.c  honmaru_5f.c  honmaru_b1f.c  meiro_teien.c  rose.c  tenshu.c  tou_turo.c
src/overlay/textbox/: bottom_elevator_activator.c  explosive_wall_spot.c  library_puzzle.c  mandragora.c  nitro.c  nitro_disposal.c
tools/: .gitignore  CMakeLists.txt  c64compression.py  compile_sample.sh  compress.py  decompress.py  liblzkn64.py  lzkn64.py  m2ctx.py  requirements.txt  rominfo.py  settings_sample.toml  splat_objects.py
(+35 files in other folders)
